MINIP_2:start!!